layout bug fixing

--- a/src/app.less
+++ b/src/app.less
@@ -7,7 +7,6 @@ html, body {
 	padding: 0;
 	height: 100%;
 	width: 100%;
-	overflow: hidden;
 	background: #222;
 	color: #fff;
 }
@@ -46,6 +45,10 @@ body {
 
 	height: 100%;
 	width: 100%;
+	position: fixed;
+	overflow: hidden;
+	top: 0;
+	left: 0;
 
 	#clock {
 		width: 400px;
@@ -214,9 +217,12 @@ body {
 		height: 100%;
 		width: 90%;
 		max-width: 420px;
-
 		box-shadow: -10px 0 25px rgba(0, 0, 0, .5);
 		padding: 20px 80px 20px 20px;
+		background-image: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.2) 100%);
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
+		background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
+		overflow: scroll;
 	}
 	#sidebar-background {
 		.panel();
@@ -227,7 +233,6 @@ body {
 	.sidebar-text {
 		h1, h2 {
 			font-weight: 400;
-			line-height: 1;
 			text-transform: uppercase;
 			color: rgba(255, 255, 255, .75);
 		}
@@ -259,12 +264,12 @@ body {
 		}
 
 		button {
-			font-family: 'Helvetica Neue', Helvetica, serif;
+			font-family: inherit;
 			cursor: pointer;
 			display: inline-block;
 			text-transform: uppercase;
 			font-size: 1rem;
-			letter-spacing: .25rem;
+			letter-spacing: .2rem;
 			text-align: center;
 			color: rgba(255, 255, 255, .5);
 			background: transparent;
@@ -272,9 +277,8 @@ body {
 			border-radius: 3px;
 			white-space: nowrap;
 			vertical-align: top;
-			min-width: 24rem;
-			max-width: 100%;
-			padding: 0 3.2rem;
+			width: 100%;
+			padding: 0 1rem;
 			height: 4rem;
 			line-height: 4rem;
 		}
